2022-10-22 LdBeth <ldbeth@sdf.org>

	* version.s: Change to "Version 6Δ".
	* s8.p: Change `solve` to `cSolve` for AC analysis.
	* ws.p: New helper program.
	* list.s: Add `s\ws` to the list.
	* Replaced various `expr("DelVar ...")` instances.

2023-05-10 LdBeth <ldbeth@sdf.org>

	* s8.p: Fix the `cSolve` as suggested by Roberto Perez-Franco.
	* bode.p, s1.p, th.p, tr.p: Replaced usage of `expr()` by `#`.

2023-05-11 LdBeth <ldbeth@sdf.org>

	* s6.p: Add the missing file.

2023-05-12 LdBeth <ldbeth@sdf.org>

	* bode.p: Fix typo.

Copyright 1998-2008, Roberto Perez-Franco
Copyright 2014, The Symbulator team
Copyright 2022-2023, LdBeth
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.