@@ -1,1 +1,1 @@
-s\aa,s\ac,s\bode,s\ck,s\dc,s\er,s\ex,s\fd,s\gain,s\list,s\menu,s\only,s\plot,s\port,s\s2t,s\s0,s\s1,s\s2,s\s3,s\s4,s\s5,s\s6,s\s7,s\s8,s\s9,s\sa,s\t2s,s\th,s\tr,s\ws,s\version
+s\aa,s\ac,s\bode,s\dc,s\er,s\ex,s\fd,s\gain,s\list,s\menu,s\only,s\plot,s\port,s\pr,s\replace,s\s2t,s\s0,s\s1,s\s2,s\s3,s\s4,s\s5,s\s6,s\s7,s\s8,s\s9,s\sa,s\sr,s\t2s,s\th,s\tr,s\version
