@@ -32,35 +32,42 @@ Title "Th"
 Item "vth"
 Item "ino"
 Item "req"
+Item "zeq"
 Item "pmax"
+Item "smax"
 Item "vrl"
 Item "irl"
 Item "prl"
+Item "srl"
 Item "eqcir"
 Title "SI"
-Item "k"
-Item "m"
-Item "µ"
-Item "n"
-Item "p"
-Item "f"
-Item "true→s\si"
-Item "false→s\si"
+Item "'E"
+Item "'P"
+Item "'T"
+Item "'G"
+Item "'M"
+Item "'K"
+Item "'m"
+Item "'µ"
+Item "'n"
+Item "'p"
+Item "'f"
+Item "'a"
 Title "Tools"
+Item "s\aa()"
+Item "s\bode()"
+Item "s\gain()"
 Item "s\only("&char(34)&char(34)&"):"
 Item "s\plot()"
-Item "s\bode()"
-Item "s\s2t("
-Item "s\t2s("
-Item "s\aa("
-Item "s\gain()"
+Item "s\pr(,)"
+Item "s\s2t()"
+Item "s\t2s()"
 Title "Handy"
 Item "1/()"
-Item "p(r,r)"
 Item "*u(t)"
 Item "*δ(t)"
 Item "2*π*f→ω:"
-Item "approx("
+Item "approx()"
 Item "solve( and ,{,})"
 Item "cSolve( and ,{,})"
 EndCustm
