@@ -1,0 +1,15 @@
+(αz1,αz2)
+Func
+© Paralel resistances adder
+
+par(r1,r2)
+r1 = Resistance 1
+r2 = Resistance 2
+
+Part of Symbulator by Perez-Franco
+If string(αz1)="0" or string(αz1)="0." or string(αz2)="0" or string(αz2)="0." Then
+Return 0
+Else
+Return αz1*αz2/(αz1+αz2)
+EndIf
+EndFunc
