@@ -1,0 +1,9 @@
+()
+Prgm
+ClrIO
+Disp ""
+Disp "        SYMBULATOR"
+Disp "  Version 7α ~2023/05/12"
+Disp "    www.symbulator.com"
+Disp ""
+EndPrgm
