@@ -1,5 +1,0 @@
-(α)
-Prgm
-Define p(α,β)=α*β/(α+β)
-Define avp(v,i)=abs(v)*abs(i)*cos(angle(v)-angle(i))/2
-EndPrgm
